removed title from project page

--- a/templates/front/includes/project.html.twig
+++ b/templates/front/includes/project.html.twig
@@ -42,7 +42,7 @@
 							</div>
 
 							<i class="far fa-file-alt"></i>
-							<h4 class="name">{{ project.title }}</h4>
+							{# <h4 class="name">{{ project.title }}</h4> #}
 							<span class="category">{{ project.category|join(', ')|title }}</span>
 						</figure>
 					{% endfor %}
