--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -38,17 +38,6 @@
 									pour vos besoins uniques.
 								</p>
 							</div>
-							<div class="bannerJump_animation banner-jump-button rts-scroll-down-circle-wrapper-4">
-								<div class="jump__anim rts_round_btn_wrap scroll-down-circle-4">
-									<div class="rts-mouse-move-button">
-										<div class="btn_wrapper">
-											<a href="#suite" class="rts-btn-mouse-move btn-hover btn-item">
-												Nos services
-												<i class="fa-solid fa-arrow-up-right"></i></a>
-										</div>
-									</div>
-								</div>
-							</div>
 						</div>
 					</div>
 				</div>
@@ -59,7 +48,7 @@
 		<!-- scriptzen about area start -->
 		<div class="rts-about-area-1 rts-section-gapBottom">
 			<div class="shape-about-one">
-				<img src="{{ asset('assets/front/images/about/05.png') }}" alt="about">
+				<img src="{{ asset('assets/front/images/about/07.png') }}" alt="about">
 			</div>
 			<div class="container-full">
 				<div class="row">
@@ -78,7 +67,7 @@
 					<div class="col-lg-12">
 						<div class="gsap-inner sec1">
 							<div class="image-wrapper-main-about mt-dec-135 rts-reveal-one">
-								<img src="{{ asset('assets/front/images/about/01.jpg') }}" alt="about" class="rts-reveal-image-one">
+								<img src="{{ asset('assets/front/images/about/12.jpg') }}" alt="about" class="rts-reveal-image-one">
 							</div>
 						</div>
 					</div>
@@ -153,7 +142,7 @@
 								technologie, où chaque projet est abordé avec une précision méticuleuse. Notre expertise en
 								stratégie, design et développement garantit des solutions numériques exceptionnelles et uniques.
 							</p>
-							<a href="#" class="learn-more-btn text-white">En savoir plus <i class="fa-solid fa-arrow-up-right"></i></a>
+							<a href="{{ url('front_project') }}" class="learn-more-btn text-white">Démonstration <i class="fa-solid fa-arrow-up-right"></i></a>
 						</div>
 						<!-- End of the left approach area -->
 					</div>
@@ -259,7 +248,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="row g-5">
+			<div class="row g-5" id="devis">
 				<div class="col-lg-4 col-md-12 col-sm-12 col-12">
 					<div class="pricing-left-area">
 						<div class="title-area">
