--- a/templates/front/devis/confirmation.html.twig
+++ b/templates/front/devis/confirmation.html.twig
@@ -4,9 +4,12 @@
 
 {% block content %}
 
+    <div class="cta-style-one rts-section-gapTop section-gap banner-bg-1" style="height: auto;">
+        <img class="d-block mx-auto mb-4" src="{{ asset('assets/front/img/merci.png') }}" alt="scriptzenit">
+        <h1 class="display-5 fw-bold text-body-emphasis text-center">Vous avez effectué une demande, un email vous a été envoyé</h1>
+    </div>
+
     <div class="text-center">
-        <img class="d-block mx-auto mb-4" src="{{ asset('img/merci.png') }}" alt="scriptzenit">
-        <h1 class="display-5 fw-bold text-body-emphasis">Vous avez effectué une demande, un email vous a été envoyé</h1>
         <div class="col-lg-6 mx-auto">
             <p class="lead mb-4">consulter votre boîte e-mail, si vous ne voyez pas le message dans la boite de réception, il ce peut qu'il soit dans les spams.</p>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
