--- a/templates/front/devis/set_password.html.twig
+++ b/templates/front/devis/set_password.html.twig
@@ -3,12 +3,15 @@
 {% block title %}Définir un mot de passe{% endblock %}
 
 {% block content %}
-    <div class="container col-xl-10 col-xxl-8 px-4 py-5">
+
+    <div class="cta-style-one rts-section-gapTop section-gap banner-bg-1" style="height: auto;">
         {% for type, messages in app.flashes %}
             {% for message in messages %}
                 <div class="alert alert-{{ type }}">{{ message }}</div>
             {% endfor %}
         {% endfor %}
+    </div>
+    <div class="container col-xl-10 col-xxl-8 px-4 py-5">
         <div class="row align-items-center g-lg-5 py-5">
             <div class="col-lg-6 col-md-6 text-center">
                 <h1 class="display-4 fw-bold lh-1 text-body-emphasis mb-3">Définissez votre mot de passe</h1>
