--- a/templates/front/ticket/home.html.twig
+++ b/templates/front/ticket/home.html.twig
@@ -4,6 +4,11 @@
 {% endblock %}
 
 {% block content %}
+<div class="cta-style-one rts-section-gapTop section-gap banner-bg-1" style="height: auto;">
+	<h1 class="display-5 fw-bold text-body-emphasis text-center">Tableau de bord</h1>
+</div>
+
+
 	<div class="container">
 		{% for type, messages in app.flashes %}
 			{% for message in messages %}
