--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -5,6 +5,17 @@
 
 {% block content %}
 
+	<div class="cta-style-one rts-section-gapTop section-gap banner-bg-1" style="height: auto;">
+		<h1 class="display-5 fw-bold text-body-emphasis text-center">Espace membre</h1>
+		<div class="text-center">
+			<h1>Heureux de vous revoir !</h1>
+			<div>
+				<h6>Vous n'êtes pas membre ?</h6>
+				<p>Inscrivez-vous en suivant ce lien <a href="{{ url('app_register') }}">Je m'inscris</a>.</p>
+			</div>
+		</div>
+	</div>
+
 	<div class="container">
 		{% for type, messages in app.flashes %}
 			{% for message in messages %}
@@ -22,13 +33,6 @@
 		{% else %}
 			<div class="container col-xl-10 col-xxl-8 px-4 py-5">
 				<div class="row align-items-center g-lg-5 py-5">
-					<div class="col-lg-7 text-center text-lg-start">
-						<h1 class="display-4 fw-bold lh-1 mb-3">Heureux de vous revoir !</h1>
-						<div class="register">
-							<h6>Vous n'êtes pas membre ?</h6>
-							<p>Inscrivez-vous en suivant ce lien <a href="{{ url('app_register') }}">Je m'inscris</a>.</p>
-						</div>
-					</div>
 					<div class="col-md-10 mx-auto col-lg-5">
 						<form class="p-4 p-md-5 border rounded-3" method="post" action="{{ url('app_login')}}">
 							<div class="form-group mb-3">
@@ -44,7 +48,7 @@
 								<div class="alert alert-danger">Identifiant ou mot de passe incorect.</div>
 							{% endif %}
 							<div class="flex items-center justify-between forgot-password mb-3">
-								<h3><strong>Vous avez du mal à vous connecter ?</strong></h3>
+								<h3 class="text-dark"><strong>Vous avez du mal à vous connecter ?</strong></h3>
 								<div class="text-sm">
 									<a href="{{ url('request_reset_password') }}" class="font-medium text-indigo-600 hover:text-indigo-500">J'ai oublié mon mot de passe.</a>
 								</div>
