--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -206,7 +206,7 @@
 								</div>
 
 								<div class="fw-pricing-row">
-									<span>Un prix compétiteur et des fonctionnalités de bases</span>
+									<span>Un prix compétitif avec des fonctionnalités de bases</span>
 								</div>
 
 								<div class="fw-button-row">
@@ -236,9 +236,7 @@
 
 								</div>
 
-								<div class="fw-default-row">Vous souhaitez aller un peu plus loin et vous avez en tête des
-																	fonctionnalités bien précises pour votre nouveau site internet ? Tout est possible
-																	techniquement, discutons ensemble de votre développement web sur mesure !
+								<div class="fw-default-row">Vous souhaitez aller un peu plus loin en ajoutant des fonctionnalités bien précises pour votre nouveau site internet ? Discutons ensemble de votre développement web sur mesure !
 								</div>
 							</div>
 						</div>
