--- a/templates/front/about/index.html.twig
+++ b/templates/front/about/index.html.twig
@@ -4,7 +4,8 @@
 {% endblock %}
 
 {% block content %}
-
+	<div class="cta-style-one rts-section-gapTop section-gap banner-bg-1" style="height: auto;">
+	</div>
 	<div class="page-title">
 		<h1>À propos</h1>
 		<div class="page-subtitle">
