--- a/templates/front/ticket/create_message.html.twig
+++ b/templates/front/ticket/create_message.html.twig
@@ -5,43 +5,45 @@
 
 {% block content %}
 
-	<div class="container">
-		{% if devisList is not empty %}
-			<h1>Créer un ticket</h1>
+	<div class="container cta-style-one rts-section-gapTop section-gap banner-bg-1" style="height: auto;">
+		<div class="container appoinment-area-two plr--120 plr_sm--20 plr_md--20">
+			{% if devisList is not empty %}
+				<h1>Créer un ticket</h1>
 
-			{{ form_start(form) }}
-			<div>
-				{{ form_label(form.content) }}
-				{{ form_widget(form.content) }}
-			</div>
-			<div>
-				{{ form_label(form.priority) }}
-				{{ form_widget(form.priority) }}
-			</div>
-			<div>
-				{{ form_label(form.status) }}
-				{{ form_widget(form.status) }}
-			</div>
-			<div>
-				{{ form_label(form.receiver)}}
-				{{ form_widget(form.receiver)}}
-			</div>
+				{{ form_start(form, {'attr': {'class': 'form-group'}}) }}
+				<div class="form-control">
+					{{ form_label(form.content) }}
+					{{ form_widget(form.content) }}
+				</div>
+				<div class="form-control">
+					{{ form_label(form.priority) }}
+					{{ form_widget(form.priority) }}
+				</div>
+				<div class="form-control">
+					{{ form_label(form.status) }}
+					{{ form_widget(form.status) }}
+				</div>
+				<div class="form-control">
+					{{ form_label(form.receiver)}}
+					{{ form_widget(form.receiver)}}
+				</div>
 
-			<div>
-				{{ form_label(form.devis) }}
-				{{ form_widget(form.devis) }}
-			</div>
+				<div class="form-control">
+					{{ form_label(form.devis) }}
+					{{ form_widget(form.devis) }}
+				</div>
 
-			<div>
-				{{ form_label(form.attachment) }}
-				{{ form_widget(form.attachment) }}
-			</div>
+				<div class="form-control">
+					{{ form_label(form.attachment) }}
+					{{ form_widget(form.attachment) }}
+				</div>
 
-			<button type="submit">Envoyer le message</button>
-			{{ form_end(form) }}
-		{% else %}
-			<p>Aucun devis trouvé pour cet utilisateur.</p>
-		{% endif %}
+				<button type="submit">Envoyer le message</button>
+				{{ form_end(form) }}
+			{% else %}
+				<p>Aucun devis trouvé pour cet utilisateur.</p>
+			{% endif %}
+		</div>
 	</div>
 
 {% endblock %}
