--- a/templates/front/ticket/index.html.twig
+++ b/templates/front/ticket/index.html.twig
@@ -5,20 +5,22 @@
 {% endblock %}
 
 {% block content %}
-	<div class="container">
-		{% for type, messages in app.flashes %}
-			{% for message in messages %}
-				<div class="alert alert-{{ type }}">{{ message }}</div>
+	<div class="cta-style-one rts-section-gapTop section-gap banner-bg-1" style="height: auto;">
+		<h1 class="display-5 fw-bold text-body-emphasis text-center">Historique des échanges</h1>
+		<div class="container">
+			{% for type, messages in app.flashes %}
+				{% for message in messages %}
+					<div class="alert alert-{{ type }}">{{ message }}</div>
+				{% endfor %}
 			{% endfor %}
-		{% endfor %}
+		</div>
 	</div>
 
 	<div class="container">
-		<h1 class="text-center">Liste des tickets</h1>
 
 		{% if tickets is empty %}
 			<div class="d-flex flex-column align-items-center">
-				<p class="text-center">Aucun ticket actif pour le moment.</p>
+				<p class="text-center text-dark">Aucun ticket actif pour le moment.</p>
 				<a href="{{ url('send_message') }}" class="btn btn-outline-primary" style="margin-right: 10px;">Créer un nouveau ticket</a>
 				<br>
 				<a href="{{ url('front_assistance') }}">
@@ -45,19 +47,19 @@
 
 								<svg class="bi mt-5 mb-3" width="48" height="48"><use xlink:href="#check2-circle"/></svg>
 								{% if ticket.status == 'En_cours' %}
-									<h1 class="text-body-emphasis">Réponse du support </h1>
+									<h1 class="text-dark">Réponse du support </h1>
 								{% else %}
-									<h1 class="text-body-emphasis">Message de votre part </h1>
+									<h1 class="text-dark">Message de votre part </h1>
 								{% endif %}
 								<p class="col-lg-6 mx-auto mb-4">
 									{{ ticket.getContent() }}
 								</p>
 								<hr>
-								<h6>Priorité de la demande</h6>
+								<h6 class="text-dark">Priorité de la demande</h6>
 								<p class="col-lg-6 mx-auto mb-4">
 									{{ ticket.getPriority }}
 								</p>
-								<h6>
+								<h6 class="text-dark">
 									Date de création
 								</h6>
 								<p class="col-lg-6 mx-auto mb-4">
