--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -5,7 +5,7 @@
 
 {% block content %}
 
-	<div class="cta-style-one rts-section-gapTop section-gap banner-bg-1" style="height: auto;">
+	<div class="cta-style-one rts-section-gapTop section-gap banner-bg-1 mb-5" style="height: auto;">
 		<h1 class="display-5 fw-bold text-body-emphasis text-center">Espace membre</h1>
 		<div class="text-center">
 			<h1>Heureux de vous revoir !</h1>
@@ -25,7 +25,7 @@
 	</div>
 
 	{% if app.user %}
-		<div class="container mb-3">
+		<div class="container mb-3 mt-30">
 			Vous êtes connecté en tant que
 			{{ app.user.userIdentifier }},
 			<a href="{{ path('app_logout') }}">Déconnexion</a>
